--- a/src/main/resources/developer.yml
+++ b/src/main/resources/developer.yml
@@ -9,5 +9,5 @@ logging:
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/rvig_brp_api_testdata
-    username: root
-    password: root
+    username: postgres
+    password: postgres
