--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -39,6 +39,15 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew build sonar
 
+    - name: Upload dependency verification report if verification failed
+      uses: actions/upload-artifact@v4
+      if: ${{ failure() }}
+      with:
+        name: dependency-verification-report
+        path: build/reports/dependency-verification/**/dependency-verification-report.html
+        if-no-files-found: ignore
+        retention-days: 7
+
     - name: Build OCI image
       if: github.ref != 'refs/heads/main'
       run: ./gradlew bootBuildImage
