--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Build JAR and analyze with Sonar
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: ./gradlew build sonar
+      run: ./gradlew --dependency-verification lenient build sonar
 
     - name: Upload dependency verification report if verification failed
       uses: actions/upload-artifact@v4
